commit 'update to main'

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">    
         <title>Portfolio</title>
         <meta charset="UTF-8" />
 
@@ -49,7 +51,7 @@
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About Me</h2>
-                <p> Hi. My name is Taya Zornes. I am currently a student persuing the dream of becoming a full stack web developer.</p>
+                <p> Hi. My name is Taya Zornes. I was born and raised in Thousandoaks California, although have been living in Washington for the past 7 years. I currently have been working at a Toyota dealership working various diffrent positions throughout the years. Although now I am currently looking to change up careers and am in persuit of a career change. I am currently a student persuing the dream of becoming a full stack web developer.</p>
 
             </div>
             <div class="headshot-container">
@@ -60,25 +62,28 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="src/images/placeholder.jpg" alt="Project One Image"/>
+                    <img class="project-image" src="src/images/Project1ScreenShot.png" alt="Project One Image"/>
                     <h3>Project One</h3>
-                    <p class="subtext">Coming Soon!</p>
+                    <p class="subtext">Gifs & Grubs</p>
                     <hr/>
-                    <p class="subtext">View here</p>
+                    <p class="subtext"><a class="project-link" href="https://joecliffordofficial.github.io/project_one_gr5/">Deployed Github Link</a></p>
+                    <p class="subtext"><a class="project-link" href="https://github.com/joecliffordofficial/project_one_gr5">Github Repo Link</a></p>
                 </div>
                 <div class="project-card">
-                        <img class="project-image" src="src/images/placeholder.jpg" alt="Project Two Image"/>
+                        <img class="project-image" src="src/images/CodeQuizChallengeScreenshot.png" alt="Project Two Image"/>
                         <h3>Project Two</h3>
-                        <p class="subtext">Coming Soon!</p>
+                        <p class="subtext">Code Quiz</p>
                         <hr/>
-                        <p class="subtext">View here</p>
+                        <p class="subtext"><a class="project-link" href="https://taya421.github.io/code-quiz-homework/">Deplayed Github Link</a></p>
+                        <p class="subtext"><a class="project-link" href="https://github.com/Taya421/code-quiz-homework">Github Repo Link</a></p>
                 </div>
                 <div class="project-card">
-                        <img class="project-image" src="src/images/placeholder.jpg" alt="Project Three Image"/>
+                        <img class="project-image" src="src/images/WorkDaySchedulerScreenshot.png" alt="Project Three Image"/>
                         <h3>Project Three</h3>
-                        <p class="subtext">Coming Soon!</p>
+                        <p class="subtext">Work Day Scheduler</p>
                         <hr/>
-                        <p class="subtext">View here</p>
+                        <p class="subtext"><a class="project-link" href="https://taya421.github.io/Work-Day-Scheduler/">Deployed Github Link</a></p>
+                        <p class="subtext"><a class="project-link" href="https://github.com/Taya421/Work-Day-Scheduler">Github Repo Link</a></p>
                 </div>
                 <div class="project-card">
                         <img class="project-image" src="src/images/placeholder.jpg" alt="Project Four Image"/>
@@ -92,6 +97,7 @@
         <footer id="contact-me">
             <h2>Contact me</h2>
             <p>tayazornes@gmail.com</p>
+            <p class="subtext"><a class="resume-link" href="src/images/TAYA RESUME.docx.pdf" download="newfilename">Resume Download Link</a></p>
         </footer>
 
         <script src="src/app.js"></script>
