--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </section>
         <section class="sub-section" id="about-me">
-            <div class="container">
+            <div class="container-fluid">
                 <h2>About Me</h2>
                 <p> Hi. My name is Taya Zornes. I was born and raised in Thousand oaks California, although have been living in Washington for the past 7 years. I currently have been working at a Toyota dealership working various different positions throughout the years. Although now I am currently looking to change up careers and am in persuit of a career change. I am currently a student persuing the dream of becoming a full stack web developer.</p>
 
